# real-time-market-data-lakehouse

./: .gitignore  README.md  databricks.yml  prd.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
apps/market_observability_streamlit/: app.py  requirements.txt
config/: azure_trial.yml  azure_trial_app.yml  azure_trial_governed.yml  common.yml  dev.yml  dev_app.yml  dev_governed.yml  prod.yml  prod_app.yml  prod_governed.yml  staging.yml  staging_app.yml  staging_governed.yml  symbols.yml
docs/: architecture.md  business_requirements.md  data_model.md  deployment_guide.md  incident_recovery.md  runbook.md
notebooks/: 01_backfill_history.py  02_ingest_live_market.py  03_transform_silver.py  04_build_gold.py  05_data_quality_checks.py  06_quality_audit_report.py  07_market_observability_report.py  08_publish_app_serving_layer.py  09_debug_app_data_plane.py  10_market_observability_dashboard.py  11_uc_write_probe.py
resources/alerts/: data_quality_alerts.yml  job_failure_notifications.yml
resources/apps/: market_observability_app.yml
resources/dashboards/: market_monitoring_dashboard.yml
resources/jobs/: backfill_history.yml  build_gold_metrics.yml  data_quality_checks.yml  debug_app_data_plane.yml  ingest_live_market.yml  market_data_medallion_pipeline.yml  market_data_medallion_pipeline_governed.yml  market_observability_dashboard_refresh.yml  market_observability_report.yml  publish_app_serving_layer.yml  (+2 more)
scripts/: deploy_bundle.sh  publish_warehouse_snapshot_local.py  setup_workspace.sh  validate_bundle.sh
src/: __init__.py
(+71 files in other folders)
